# normalized-path

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  release.sh
.cargo/: config.toml
.github/workflows/: ci.yml  export-corpus.yml  fuzz.yml  import-corpus.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_path_element.rs
src/: case_sensitivity.rs  error.rs  java_modified_utf8.rs  jni_support.rs  lib.rs  normalize.rs  os.rs  path_element.rs  unicode.rs  utils.rs
