[workspace]
members = [".", "fuzz"]
exclude = ["fuzz"]
resolver = "3"

[package]
name = "normalized-path"
version = "0.0.1"
description = "Opinionated cross-platform, optionally case-insensitive path normalization"
repository = "https://github.com/ngg/normalized-path"
publish = false
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
std = ["thiserror/std"]
__test = []

[dependencies]
# Pinned to 2.1.x for Unicode 17.0.0
icu_casemap = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }
icu_normalizer = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }
icu_properties = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }
memchr = { version = "2.0.0", default-features = false }
thiserror = { version = "2.0.0", default-features = false }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = ["CFString"] }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
