[workspace]
members = [".", "fuzz"]
exclude = ["fuzz"]
resolver = "3"

[package]
name = "normalized-path"
version = "0.0.1"
description = "Opinionated cross-platform, optionally case-insensitive path normalization"
repository = "https://github.com/ngg/normalized-path"
documentation = "https://docs.rs/normalized-path"
publish = false
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
std = []
__test = []

[dependencies]
# Pinned to 2.1.x for Unicode 17.0.0
icu_casemap = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }
icu_normalizer = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }
icu_properties = { version = "~2.1.0", default-features = false, features = ["compiled_data"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = ["CFString"] }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
