[workspace]
members = [".", "fuzz"]
exclude = ["fuzz"]
resolver = "3"

[workspace.dependencies]
# Pinned to 2.1.x–2.2.x for Unicode 17.0.0
icu_casemap = { version = ">=2.1.0, <2.3.0", default-features = false, features = ["compiled_data"] }
icu_locale_core = { version = ">=2.1.0, <2.3.0", default-features = false }
icu_normalizer = { version = ">=2.1.0, <2.3.0", default-features = false, features = ["compiled_data"] }
icu_properties = { version = ">=2.1.0, <2.3.0", default-features = false, features = ["compiled_data"] }

[package]
name = "normalized-path"
version = "0.0.4"
description = "Opinionated cross-platform, optionally case-insensitive path normalization"
repository = "https://github.com/ngg/normalized-path"
documentation = "https://docs.rs/normalized-path"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["std"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
std = []
__test = []

[dependencies]
icu_casemap = { workspace = true }
icu_normalizer = { workspace = true }
icu_properties = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = ["CFString"] }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
