[package]
name = "normalized-path-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
icu_casemap = { workspace = true }
icu_locale_core = { workspace = true }
libfuzzer-sys = "0.4.0"

normalized-path = { path = "..", features = ["__test"] }

[[bin]]
name = "fuzz_path_element"
path = "fuzz_targets/fuzz_path_element.rs"
test = false
doc = false
bench = false
